--- a/src/components/about/AboutMe.astro
+++ b/src/components/about/AboutMe.astro
@@ -57,10 +57,6 @@
       display: inline-block;
       padding-inline-end: 3rem;
     }
-
-    p {
-      color: #d2c6e1;
-    }
   }
 
   .about-nav {
@@ -80,12 +76,10 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     font-size: 0.9rem;
-    color: #d2c6e1;
 
     & .bullet {
       width: 2rem;
       height: 0.1rem;
-      background-color: #d2c6e1;
       transition: all 0.3s ease;
     }
     &.active {
@@ -134,12 +128,12 @@
   @keyframes grow {
     from {
       width: 0%;
-      background: #ff5d5d;
+      background: var(--accent);
     }
 
     to {
       width: 60%;
-      background: #ff5d5d;
+      background: var(--accent);
     }
   }
 </style>
