updates header and footer to make sure the visible grid doesn't overflow on smaller screens

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -73,6 +73,11 @@ import VisibleGrid from "./VisibleGrid.astro";
     left: -725px;
     z-index: -1;
   }
+  @media screen and (max-width: 650px) {
+    .top-right-grid {
+      display: none;
+    }
+  }
   /* @media screen and (min-width: 1441px) {
     ul {
       max-width: 1440px;
