--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -45,7 +45,7 @@ const social = [
     bottom: 0;
     width: 100%;
     padding: 1rem;
-    /* overflow: clip; */
+    overflow: clip;
     z-index: 100;
   }
 
