--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -1,6 +1,6 @@
 ---
 import AboutMe from "@components/about/AboutMe.astro";
-import FullScreenLayout from "../layouts/FullScreenLayout.astro";
+import FullScreenLayout from "../../layouts/FullScreenLayout.astro";
 import History from "@components/about/History.astro";
 ---
 
