stye(home): makes the home screen mobile friendly

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -116,6 +116,39 @@ import FullScreenLayout from "../layouts/FullScreenLayout.astro";
     margin-block: 0.25rem 1rem;
   }
 
+  @media screen and (max-width: 1060px) {
+    .intro {
+      max-width: 600px;
+      margin-inline: auto;
+      grid-template-columns: 1fr;
+      grid-template-rows: auto;
+      gap: 2rem;
+      padding-inline: 0;
+      padding-block: 82px;
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: none;
+    }
+
+    .visible-grid-wrapper {
+      display: none;
+    }
+
+    .intro-img {
+      grid-column: 1 / 2;
+      grid-row: auto;
+      width: 90%;
+      margin: 0 auto;
+    }
+
+    .intro-text {
+      grid-column: 1 / 2;
+      grid-row: auto;
+      padding: 0;
+    }
+  }
+
   @keyframes grow {
     from {
       width: 0%;
