feat: adds a blog post layout for using with snippets and blog

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,17 +1,19 @@
 ---
-import Layout from '../layouts/Layout.astro'
-import BlogPost from '../components/BlogPost.astro';
-const allPosts = await Astro.glob('./posts/*.md');
+import BlogPost from "../components/BlogPost.astro";
+import FullScreenLayout from "@layouts/FullScreenLayout.astro";
+const allPosts = await Astro.glob("./posts/*.md");
 const pageTitle = "My Astro Learning Blog";
 ---
 
-<Layout title={pageTitle}>
+<FullScreenLayout title={pageTitle}>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
-    {allPosts.map((post) => (
+    {
+      allPosts.map((post) => (
         <li>
-            <BlogPost url={post.url} post={post.frontmatter} />
+          <BlogPost url={post.url} post={post.frontmatter} />
         </li>
-    ))}
+      ))
+    }
   </ul>
-</Layout>
+</FullScreenLayout>
