--- a/src/pages/snippets.astro
+++ b/src/pages/snippets.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../layouts/Layout.astro";
 import SnippetsList from "../components/Snippets/SnippetsList.astro";
+import FullScreenLayout from "@layouts/FullScreenLayout.astro";
 ---
-<Layout title="Snippets">
-  <SnippetsList />
-</Layout>
 
+<FullScreenLayout title="Snippets">
+  <SnippetsList />
+</FullScreenLayout>
