--- a/src/pages/snippets/[slug].astro
+++ b/src/pages/snippets/[slug].astro
@@ -1,30 +1,32 @@
 ---
 import type { GetStaticPaths } from "astro";
 import { getCollection, type CollectionEntry } from "astro:content";
-import Layout from "../../layouts/Layout.astro";
-import Snippet from "../../components/Snippets/Snippet.astro";
+import FullScreenLayout from "@layouts/FullScreenLayout.astro";
+import BlogLayout from "@layouts/BlogLayout.astro";
 
 export const getStaticPaths = (async () => {
-    const snippets = await getCollection("snippets");
-    return snippets.map((snippet: CollectionEntry<'snippets'>) => ({
-        params: {
-            slug: snippet.slug
-        },
-        props: { 
-            snippet
-        }
-    }));
+  const snippets = await getCollection("snippets");
+  return snippets.map((snippet: CollectionEntry<"snippets">) => ({
+    params: {
+      slug: snippet.slug,
+    },
+    props: {
+      snippet,
+    },
+  }));
 }) satisfies GetStaticPaths;
 
 const { slug } = Astro.params;
 
 type Props = {
-    snippet: CollectionEntry<'snippets'>;
-}
+  snippet: CollectionEntry<"snippets">;
+};
 const { snippet } = Astro.props;
-const { Content } = await snippet.render()
+const { Content } = await snippet.render();
 ---
 
-<Layout title="Snippets">
-    <Snippet snippet={snippet} />
-</Layout>
+<FullScreenLayout title={snippet.data.title || "Snippets"}>
+  <BlogLayout>
+    <Content />
+  </BlogLayout>
+</FullScreenLayout>
