--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../../layouts/Layout.astro';
 import Flex from '../../components/style/Flex.astro';
 import BlogPost from '../../components/BlogPost.astro';
 import { Debug } from 'astro:components'
+import FullScreenLayout from '@layouts/FullScreenLayout.astro';
 
 export async function getStaticPaths() {
     const allPosts = await Astro.glob("../posts/*.md")
@@ -27,7 +27,7 @@ const filteredPosts = posts.filter(post => post.frontmatter.tags.includes(tag))
 
 ---
 
-<Layout title={tag}}>
+<FullScreenLayout title={tag}}>
     <p>Posts tagged with {tag}</p>
 
     <Flex as="section" direction="column" gap="1rem">
@@ -36,4 +36,4 @@ const filteredPosts = posts.filter(post => post.frontmatter.tags.includes(tag))
         ))}
     </Flex>
         
-</Layout>
+</F>
