--- a/src/pages/articles.astro
+++ b/src/pages/articles.astro
@@ -3,7 +3,7 @@ import BlogPost from "../components/BlogPost.astro";
 import FullScreenLayout from "@layouts/FullScreenLayout.astro";
 import { getCollection } from "astro:content";
 
-const posts = await getCollection("blog");
+const posts = await getCollection("articles");
 const pageTitle = "My Astro Learning Blog";
 ---
 
@@ -13,7 +13,7 @@ const pageTitle = "My Astro Learning Blog";
     {
       posts.map((post) => (
         <li>
-          <a href={`/blog/${post.slug}`}>
+          <a href={`/articles/${post.slug}`}>
             <h2>{post.data.title}</h2>
           </a>
         </li>
