adds an unsocial section

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -29,7 +29,7 @@ import VisibleGrid from "./VisibleGrid.astro";
     </div>
   </li>
   <li><a href="/blog/">Blog</a></li>
-  <li><a href="/tags/">Tags</a></li>
+  <li><a href="/unsocial/">Unsocial</a></li>
 </ul>
 
 <button class="main-nav-btn">
