--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,39 +1,40 @@
 ---
-import Flex from '../../components/style/Flex.astro';
-import BlogPost from '../../components/BlogPost.astro';
-import { Debug } from 'astro:components'
-import FullScreenLayout from '@layouts/FullScreenLayout.astro';
+import Flex from "../../components/style/Flex.astro";
+import BlogPost from "../../components/BlogPost.astro";
+import { Debug } from "astro:components";
+import FullScreenLayout from "@layouts/FullScreenLayout.astro";
 
 export async function getStaticPaths() {
-    const allPosts = await Astro.glob("../posts/*.md")
-    const allTags = allPosts.flatMap(post => post.frontmatter.tags)
-    const uniqueTags = Array.from(new Set(allTags))
+  const allPosts = await Astro.glob("../posts/*.md");
+  const allTags = allPosts.flatMap((post) => post.frontmatter.tags);
+  const uniqueTags = Array.from(new Set(allTags));
 
-    return uniqueTags.map(tag => {
-        const filteredPosts = allPosts.filter(post => {
-            console.log({tags: post.frontmatter.tags, tag})
-            return post.frontmatter.tags.includes(tag)})
-        if(tag === 'board-games') console.log(filteredPosts)
-        return {
-            params: { tag },
-            props: { posts: filteredPosts },
-        }
-    })
+  return uniqueTags.map((tag) => {
+    const filteredPosts = allPosts.filter((post) => {
+      return post.frontmatter.tags.includes(tag);
+    });
+    return {
+      params: { tag },
+      props: { posts: filteredPosts },
+    };
+  });
 }
 
-const { tag } = Astro.params
-const { posts } = Astro.props
-const filteredPosts = posts.filter(post => post.frontmatter.tags.includes(tag))
-
+const { tag } = Astro.params;
+const { posts } = Astro.props;
+const filteredPosts = posts.filter((post) =>
+  post.frontmatter.tags.includes(tag)
+);
 ---
 
-<FullScreenLayout title={tag}}>
-    <p>Posts tagged with {tag}</p>
+<FullScreenLayout title={tag} }>
+  <p>Posts tagged with {tag}</p>
 
-    <Flex as="section" direction="column" gap="1rem">
-        {filteredPosts.map((post) => (
-            <BlogPost url={post.url} post={post.frontmatter} />
-        ))}
-    </Flex>
-        
-</F>
+  <Flex as="section" direction="column" gap="1rem">
+    {
+      filteredPosts.map((post) => (
+        <BlogPost url={post.url} post={post.frontmatter} />
+      ))
+    }
+  </Flex>
+</FullScreenLayout>
